Features: Prevent Text Overlapping Icon

--- a/widgets/features/styles/default.less
+++ b/widgets/features/styles/default.less
@@ -106,8 +106,6 @@
 				color: #FFFFFF;
 				width: @container_size;
 				height: @container_size;
-				position: absolute;
-				top: 0;
 				display: flex;
 				align-items: center;
 				justify-content: center;
